    exist. Closes: #229357
  * Improve deb-shlibs(5) to mention that the dependency field must
    use the same syntax than a Depends field. Closes: #658696
  * Update dpkg-maintscript-helper(1) to recommend usage of the version
    removing/renaming a conffile with a "~" suffix as "priorversion"
    parameter. Thanks to Sam Morris <sam@robots.org.uk> for the patch.
    Closes: #658854

  [ Jonathan Nieder ]
  * Bump po4a version in Build-Depends to 0.41, since earlier versions do
    not handle --srcdir correctly. Closes: #644370

  [ Helge Kreutzmann ]
  * Fix a typo in man/dpkg-deb.1.

  [ Updated dpkg translations ]
  * German (Sven Joachim).
  * Italian (Milo Casagrande). Closes: #627832, #657849
  * Swedish (Peter Krefting).
  * French (Christian Perrier)
  * Polish (Michał Kułach). Closes: #658126

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).
  * Spanish (Omar Campagne). Closes: #636238
  * Swedish (Peter Krefting).

  [ Updated man page translations ]
  * German (Helge Kreutzmann), including typo fix in dpkg-genchanges 
    Closes: #646496, sub optimal translation of package states LP: #368783
    and an fix by Chris Leick
  * Japanese (TAKAHASHI Motonobu).
  * Spanish (Omar Campagne). Closes: #643969
  * Swedish (Peter Krefting).
  * Minor errors corrected in French (thanks to David Prévot)
  * Fix translation of -B and -A options of dpkg-buildpackage.
    Thanks to Vincent Danjean. Closes: #654626

  [ Updated dselect translations ]
  * Dutch (Jeroen Schot). Closes: #651813

 -- Helge Kreutzmann <debian@helgefjell.de>  Fri, 23 Sep 2011 17:29:38 +0200

dpkg (1.16.1.2) unstable; urgency=medium

  [ Raphaël Hertzog ]
  * Fix another typo to correctly set DEB_*_ARCH_BITS in architecture.mk.
  * Set urgency to medium as changes are minor, and it should migrate
    quickly in case 1.16.2 comes soon.

  [ Jonathan Nieder ]
  * Update dpkg-buildflags(1) to note that the processor option