@@ -99,6 +99,7 @@ dpkg (1.16.2) UNRELEASED; urgency=low
     removing/renaming a conffile with a "~" suffix as "priorversion"
     parameter. Thanks to Sam Morris <sam@robots.org.uk> for the patch.
     Closes: #658854
+  * Fix debug output of dpkg-maintscript-helper. LP: #936340
 
   [ Jonathan Nieder ]
   * Bump po4a version in Build-Depends to 0.41, since earlier versions do
